Added account control

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-NEWS_API_KEY="Put_your_api_key_here"
+NEWS_API_KEY=""
+DATABASE_NAME=""
+DATABASE_USER=""
+DATABASE_PASSWORD=""
+DATABASE_HOST=""
+DATABASE_DRIVER=""
