--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "jcobhams/newsapi": "^1.0",
     "twig/twig": "^3.0",
     "nikic/fast-route": "^1.3",
-    "nesbot/carbon": "^2.63"
+    "nesbot/carbon": "^2.63",
+    "doctrine/dbal": "^3.5"
   }
 }
