--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "twig/twig": "^3.0",
     "nikic/fast-route": "^1.3",
     "nesbot/carbon": "^2.63",
-    "doctrine/dbal": "^3.5"
+    "doctrine/dbal": "^3.5",
+    "composer/class-map-generator": "^1.0"
   }
 }
